Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus

v0.001 2020-xx-xx
    - Initial release

v0.000001
    - Initial pre-release development