@@ -1,15 +1,17 @@
 language: perl
 perl:
-    - "5.26"
-    - "5.24"
-    - "5.22"
-    - "5.20"
-    - "5.18"
-    - "5.16"
-    - "5.14"
-    - "5.12"
-    - "5.10"
-    - "5.8"
+    - "5.30"
+    #- "5.28"
+    #- "5.26"
+    #- "5.24"
+    #- "5.22"
+    #- "5.20"
+    #- "5.18"
+    #- "5.16"
+    #- "5.14"
+    #- "5.12"
+    #- "5.10"
+    #- "5.8"
 
 os:
     - linux
@@ -40,7 +42,7 @@ script:
 after_success:
   - coverage-report
 
-matrix:
-  include:
-    - perl: "5.24"
-      env: COVERAGE=1
+#matrix:
+#  include:
+#    - perl: "5.30"
+#      env: COVERAGE=1
