@@ -1,5 +1,10 @@
 Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus
 
+TODO
+    - debugging: force UNKNOWN on linux
+    - fix arrows in docs
+    - figure out dependencies and minimum version
+
 v0.001 2020-xx-xx
     - Initial release
 
